--- a/Presentation/01-La syntaxe basique.ipynb
+++ b/Presentation/01-La syntaxe basique.ipynb
@@ -568,8 +568,7 @@
       " |      If there are two arguments, they must be strings of equal length, and\n",
       " |      in the resulting dictionary, each character in x will be mapped to the\n",
       " |      character at the same position in y. If there is a third argument, it\n",
-      " |      must be a string, whose characters will be mapped to None in the result.\n",
-      "\n"
+      " |      must be a string, whose characters will be mapped to None in the result.\n"
      ]
     }
    ],
@@ -784,34 +783,6 @@
    "source": [
     "x"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
