--- a/Ateliers/Corrections/Atelier_4.2.2.ipynb
+++ b/Ateliers/Corrections/Atelier_4.2.2.ipynb
@@ -48,6 +48,50 @@
     "else:\n",
     "    print(\"sont identiques.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nom du premier fichier :  F:\\PythonFormation\\Presentations\\donnees\\FichiertexteOutput.txt\n",
+      "Nom du second fichier :  F:\\PythonFormation\\Presentations\\donnees\\FichiertexteOutput1.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ces 2 fichiers diffèrent à partir du caractère n° 62\n"
+     ]
+    }
+   ],
+   "source": [
+    "fich1 = input(\"Nom du premier fichier : \")\n",
+    "fich2 = input(\"Nom du second fichier : \")\n",
+    "c, f = 0, 0 # compteur de caractères et \"drapeau\"\n",
+    "with open(fich1, 'r') as fichier1, open(fich2, 'r') as fichier2:\n",
+    "    while 1:\n",
+    "        c = c + 1\n",
+    "        car1 = fichier1.read(1) # lecture d'un caractère dans chacun\n",
+    "        car2 = fichier2.read(1) # des deux fichiers\n",
+    "        if car1 ==\"\" or car2 ==\"\":\n",
+    "            break\n",
+    "        if car1 != car2 :\n",
+    "            f = 1\n",
+    "            break # différence trouvée\n",
+    "            \n",
+    "print(\"Ces 2 fichiers\", end=' ')\n",
+    "if f ==1:\n",
+    "    print(\"diffèrent à partir du caractère n°\", c)\n",
+    "else:\n",
+    "    print(\"sont identiques.\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
