--- a/Ateliers/Corrections/Atelier_4.2.3.ipynb
+++ b/Ateliers/Corrections/Atelier_4.2.3.ipynb
@@ -46,6 +46,27 @@
     "fiB.close()\n",
     "fiC.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fich1 = input(\"Nom du premier fichier : \")\n",
+    "fich2 = input(\"Nom du second fichier : \")\n",
+    "fichC = input(\"Nom du fichier destinataire : \")\n",
+    "\n",
+    "with open(fich1, 'r') as fichier1, open(fich2, 'r') as fichier2, open(fichC, 'w') as fichier3:\n",
+    "    ligneA = fichier1.readline()\n",
+    "    ligneB = fichier2.readline()\n",
+    "    if ligneA ==\"\" and ligneB ==\"\":\n",
+    "        break # On est arrivé à la fin des 2 fichiers\n",
+    "    if ligneA != \"\":\n",
+    "        fichier3.write(ligneA)\n",
+    "    if ligneB != \"\":\n",
+    "        fichier3.write(ligneB)"
+   ]
   }
  ],
  "metadata": {
