--- a/Ateliers/Corrections/Atelier_4.2.4.ipynb
+++ b/Ateliers/Corrections/Atelier_4.2.4.ipynb
@@ -49,6 +49,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nomF = input('Nom du fichier destinataire : ')\n",
+    "with open(nomF, 'a') as of:\n",
+    "    while 1:\n",
+    "        tt = encodage()\n",
+    "        if tt == []:\n",
+    "            break\n",
+    "        enregistrer(tt)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
