--- a/Ateliers/Corrections/Atelier_4.2.5.ipynb
+++ b/Ateliers/Corrections/Atelier_4.2.5.ipynb
@@ -54,13 +54,32 @@
     "    tt.append(sexe)\n",
     "    return tt\n",
     "    \n",
-    "def enregistrer(tt):\n",
+    "def enregistrer(tt, fd):\n",
     "    \"enregistrer les données de la liste tt en les séparant par des <#>\"\n",
     "    i = 0\n",
     "    while i < len(tt):\n",
     "        fd.write(tt[i] + \"#\")\n",
     "        i = i + 1\n",
     "    fd.write(\"\\n\") # caractère de fin de ligne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fSource = input('Nom du fichier source : ')\n",
+    "fDest = input('Nom du fichier destinataire : ')\n",
+    "\n",
+    "with open(fSource, 'r') as fs, open(fDest, 'w') as fd:\n",
+    "    while 1:\n",
+    "        ligne = fs.readline() # lire une ligne du fichier source\n",
+    "        if ligne ==\"\" or ligne ==\"\\n\":\n",
+    "            break\n",
+    "        liste = traduire(ligne) # la convertir en une liste\n",
+    "        liste = encodage(liste) # y ajouter les données supplémentaires\n",
+    "        enregistrer(liste, fd) # sauvegarder dans fichier dest."
    ]
   },
   {
