--- a/Ateliers/Corrections/Atelier_4.3.1.ipynb
+++ b/Ateliers/Corrections/Atelier_4.3.1.ipynb
@@ -34,13 +34,10 @@
    "source": [
     "from random import random\n",
     "fiSource = input(\"Nom du fichier à traiter : \")\n",
-    "fs = open(fiSource, 'w')\n",
-    "\n",
-    "for i in range(0,25) :\n",
-    "    ch = \"{:5.2f}\\n\".format(random()*100)\n",
-    "    fs.write(ch)\n",
-    "    \n",
-    "fs.close()    "
+    "with open(fiSource, 'w') as fs:\n",
+    "    for i in range(0,25) :\n",
+    "        ch = \"{:5.2f}\\n\".format(random()*100)\n",
+    "        fs.write(ch)"
    ]
   },
   {
@@ -83,17 +80,13 @@
     "    \n",
     "fiSource = input(\"Nom du fichier à traiter : \")\n",
     "fiDest = input(\"Nom du fichier destinataire : \")\n",
-    "fs = open(fiSource, 'r')\n",
-    "fd = open(fiDest, 'w')\n",
+    "with open(fiSource, 'r') as fs, open(fiDest, 'w') as fd:\n",
     "\n",
-    "while 1:\n",
-    "    diam = fs.readline()\n",
-    "    if diam == \"\" or diam == \"\\n\":\n",
-    "        break\n",
-    "    fd.write(caractSphere(diam) + \"\\n\") # enregistrement\n",
-    "    \n",
-    "fd.close()\n",
-    "fs.close()"
+    "    while 1:\n",
+    "        diam = fs.readline()\n",
+    "        if diam == \"\" or diam == \"\\n\":\n",
+    "            break\n",
+    "        fd.write(caractSphere(diam) + \"\\n\") # enregistrement"
    ]
   }
  ],
