--- a/Ateliers/Corrections/Atelier_4.3.2.ipynb
+++ b/Ateliers/Corrections/Atelier_4.3.2.ipynb
@@ -105,21 +105,17 @@
     "# Conversion Latin-1 => Utf8 (variante utilisant une variable <bytes>\n",
     "fiSource = input(\"Nom du fichier à traiter (Latin-1) : \")\n",
     "fiDest = input(\"Nom du fichier destinataire (Utf-8) : \")\n",
-    "fs = open(fiSource, 'rb') # mode de lecture <binaire>\n",
-    "fd = open(fiDest, 'wb')   # mode d'écriture <binaire>\n",
     "\n",
-    "while 1:\n",
-    "    so = fs.readline() # la ligne lue est une séquence d'octets\n",
-    "    # Remarque : la variable so étant du type <bytes>, on doit la comparer\n",
-    "    # avec une chaîne littérale (vide) du même type dans les tests :\n",
-    "    if so == b\"\":\n",
-    "        break # fin du fichier\n",
-    "    ch = so.decode(\"Latin-1\")   # conversion en chaîne de caractères\n",
-    "    so = ch.encode(\"Utf-8\")     # Ré-encodage en une séquence d'octets\n",
-    "    fd.write(so) # transcription\n",
-    "    \n",
-    "fd.close()\n",
-    "fs.close()"
+    "with open(fiSource, 'rb') as fs, open(fiDest, 'wb') as fd: # mode de lecture <binaire> et mode d'écriture <binaire>\n",
+    "    while 1:\n",
+    "        so = fs.readline() # la ligne lue est une séquence d'octets\n",
+    "        # Remarque : la variable so étant du type <bytes>, on doit la comparer\n",
+    "        # avec une chaîne littérale (vide) du même type dans les tests :\n",
+    "        if so == b\"\":\n",
+    "            break # fin du fichier\n",
+    "        ch = so.decode(\"Latin-1\")   # conversion en chaîne de caractères\n",
+    "        so = ch.encode(\"Utf-8\")     # Ré-encodage en une séquence d'octets\n",
+    "        fd.write(so) # transcription"
    ]
   },
   {
