--- a/DataFrames/02-LesRegroupentsEtJointures.ipynb
+++ b/DataFrames/02-LesRegroupentsEtJointures.ipynb
@@ -50,24 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-11T06:41:50.507898Z",
      "start_time": "2023-10-11T06:41:49.482545Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "connecting with engine Engine(postgresql://stagiaire:***@51.91.76.248:15432/cours)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "engine = sqlalchemy.create_engine(\"postgresql://stagiaire:Phoenix#Icar67@51.91.76.248:15432/cours\")\n",
+    "engine = sqlalchemy.create_engine(\"postgresql://xxx:xxx@xxx:xxx/cours\")\n",
     "connection = engine.connect()\n",
     "print(f\"connecting with engine {engine}\")"
    ]
@@ -3642,7 +3634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
