--- a/Spark-DataFrames/01-API.DataFrames-colonnes-projections.ipynb
+++ b/Spark-DataFrames/01-API.DataFrames-colonnes-projections.ipynb
@@ -32,6 +32,29 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# windows\n",
+    "# os.environ['SPARK_HOME']=f'{get_python_lib()}{os.sep}pyspark'\n",
+    "# os.environ['PYSPARK_PYTHON']=f'{get_python_lib()}{os.sep}pyspark'.split('Lib')[0]+'python.exe'\n",
+    "# linux\n",
+    "# os.environ['SPARK_HOME']=f'{get_python_lib()}{os.sep}pyspark'\n",
+    "# os.environ['PYSPARK_PYTHON']=get_python_lib().replace('lib','bin').replace('/site-packages','')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
@@ -172,8 +195,7 @@
       "+---+--------+-----+\n",
       "|  1|Isabelle|BIZOÏ|\n",
       "|  2|  Razvan|BIZOÏ|\n",
-      "+---+--------+-----+\n",
-      "\n"
+      "+---+--------+-----+\n"
      ]
     }
    ],
@@ -294,8 +316,7 @@
       " |-- nnuage4: integer (nullable = true)\n",
       " |-- ctype4: integer (nullable = true)\n",
       " |-- hnuage4: integer (nullable = true)\n",
-      " |-- _c59: string (nullable = true)\n",
-      "\n"
+      " |-- _c59: string (nullable = true)\n"
      ]
     }
    ],
@@ -409,9 +430,7 @@
       "|     7005|20230801000000|288.55|\n",
       "|     7015|20230801000000|288.75|\n",
       "|     7020|20230801000000|289.45|\n",
-      "+---------+--------------+------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+---------+--------------+------+\n"
      ]
     }
    ],
@@ -472,9 +491,7 @@
       "|     7005|15.400000000000034|  256630.0|\n",
       "|     7015|15.600000000000023|658331.115|\n",
       "|     7020| 16.30000000000001|  155250.0|\n",
-      "+---------+------------------+----------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+---------+------------------+----------+\n"
      ]
     }
    ],
@@ -572,9 +589,7 @@
       "|07005|      ABBEVILLE|   50.136|    1.834|      69|69000|\n",
       "|07015|  LILLE-LESQUIN|    50.57|   3.0975|      47|47000|\n",
       "|07020|PTE DE LA HAGUE|49.725166|-1.939833|       6| 6000|\n",
-      "+-----+---------------+---------+---------+--------+-----+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+-----+---------------+---------+---------+--------+-----+\n"
      ]
     }
    ],
@@ -602,9 +617,7 @@
       "|07005|      Abbeville|   50.136|    1.834|      69|69000|\n",
       "|07015|          Lille|    50.57|   3.0975|      47|47000|\n",
       "|07020|Pte De La Hague|49.725166|-1.939833|       6| 6000|\n",
-      "+-----+---------------+---------+---------+--------+-----+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+-----+---------------+---------+---------+--------+-----+\n"
      ]
     }
    ],
@@ -632,9 +645,7 @@
       "|      ABBEVILLE|      69|\n",
       "|  LILLE-LESQUIN|      47|\n",
       "|PTE DE LA HAGUE|       6|\n",
-      "+---------------+--------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+---------------+--------+\n"
      ]
     }
    ],
@@ -671,9 +682,7 @@
       "|      ALENCON|     143|\n",
       "|BALE-MULHOUSE|     263|\n",
       "|       BASTIA|      10|\n",
-      "+-------------+--------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "+-------------+--------+\n"
      ]
     }
    ],
@@ -704,9 +713,7 @@
       "|            MILLAU|     712|\n",
       "|         ST GIRONS|     414|\n",
       "|LIMOGES-BELLEGARDE|     402|\n",
-      "+------------------+--------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "+------------------+--------+\n"
      ]
     }
    ],
@@ -775,9 +782,7 @@
       "|7005| 2023|  11|  30|        4.5|\n",
       "|7005| 2023|  11|  30|        4.6|\n",
       "|7005| 2023|  11|  30|        4.8|\n",
-      "+----+-----+----+----+-----------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "+----+-----+----+----+-----------+\n"
      ]
     }
    ],
@@ -811,8 +816,7 @@
       "| stddev| 8.006457123929179|344.4202142570863| 7.336417149748348|\n",
       "|    min|              1996|             0101|             -21.3|\n",
       "|    max|              2023|             1231|              96.0|\n",
-      "+-------+------------------+-----------------+------------------+\n",
-      "\n"
+      "+-------+------------------+-----------------+------------------+\n"
      ]
     }
    ],
